2014-11-07  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.7.0-rc2 Released.

2014-11-06 09:05 +0000 [r427382]  Corey Farrell <git@cfware.com>

	* Fix unintential memory retention in stringfields.

	  * Fix missing / unreachable calls to
	    __ast_string_field_release_active.
	  * Reset pool->used to zero when the current pool->active reaches
	    zero.

	ASTERISK-24307 #close
	Reported by: Etienne Lessard
	Tested by: ibercom, Etienne Lessard
	Review: https://reviewboard.asterisk.org/r/4114/

2014-11-03  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.7.0-rc1 Released.

2014-11-03 17:54 +0000 [r427129]  Richard Mudgett <rmudgett@digium.com>

	* res/res_pjsip.c, configs/pjsip.conf.sample,
	  res/res_pjsip/config_system.c, UPGRADE.txt: res_pjsip: Add
	  disable_tcp_switch option. When a packet exceeds the MTU,
	  pjproject will switch from UDP to TCP. In some circumstances (on
	  some networks), this can cause some issues with messages not
	  getting sent to the correct destination - and can also cause
	  connections to get dropped due to quirks in pjproject deciding to
	  terminate TCP connections with no messages. While fixing the
	  routing/messaging issues is important, having a configuration
	  option in Asterisk that tells pjproject to not switch over to TCP
	  would be useful. That way, if some glitch is discovered on some
	  other network/site, we can at least disable the behavior until a
	  fix is put into place. AFS-197 #close Review:
	  https://reviewboard.asterisk.org/r/4137/

2014-11-03 02:33 +0000 [r427020-427088]  Corey Farrell <git@cfware.com>

	* apps/app_voicemail.c, /: Fix compile error caused by review 4138
	  There is no procedure called ast_closeframe, fix code to use
	  ast_closestream. Reported By: Matt Jordan ........ Merged
	  revisions 427087 from
	  http://svn.asterisk.org/svn/asterisk/branches/11

	* apps/app_voicemail.c, /, main/app.c: Fix ast_writestream leaks