@@ -1,1 +1,1 @@
-12.7.0-rc2
+12.7.0
