@@ -1,3 +1,7 @@
+2014-11-10  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 12.7.0 Released.
+
 2014-11-07  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 12.7.0-rc2 Released.
